# cpp-programming

./: CMakeLists.txt  CMakePresets.json
C++ Programming/: struct.cpp
C++ Programming/Basics/: callby.cpp  class_initialisation.cpp  classes.cpp  enum.cpp  refence.cpp
C++ Programming/OOS-Labor/: LA1.cpp  LA2.cpp  LA3.cpp  LA4.cpp  LA5.cpp  LA6.cpp
C++ Programming/practice/: VL_A1.cpp  VL_A2.cpp
CMake_Labor13/: Employee.cpp  Employee.h  Manager.cpp  Manager.h  Worker.cpp  Worker.h  main.cpp
CMake_Labor14/: Employee.ixx  Manager.ixx  Worker.ixx  main_L14.cpp
Klausurv/: Elektro.cpp  Elektro.h  Fahrzeug.cpp  Fahrzeug.h  Fuhrpark.cpp  Fuhrpark.h  car.cpp  main_fuhrpark.cpp  practice1.cpp
Learning/: Quiz.cpp  abstract_classes.cpp  callby.cpp  class_initialisation.cpp  classes.cpp  constructors.cpp  enum.cpp  inheritance.cpp  refence.cpp  static.cpp  test.cpp  virtual_methods.cpp
OOS-Labor/Labor 1 - 10/: LA1.cpp  LA10.cpp  LA2.cpp  LA3.cpp  LA4.cpp  LA5.cpp  LA6.cpp  LA7.cpp  LA8.cpp  LA9.cpp
OOS-Labor/Labor 11-20/: LA11.cpp  LA12.cpp  LA15.cpp  LA16.cpp  LA17.cpp  LA18.cpp  LA19.cpp  LA20.cpp
OOS-Labor/Labor 21-25/: LA21.cpp  LA22.cpp  LA23.cpp
Vorlesungen/: VL_A1.cpp  VL_A2.cpp  VL_A3.cpp  VL_A4.cpp  struct.cpp
projects/: determinant.cpp
